K8s/yaml/06-apache.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache
  labels:
    app: apache
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apache
  template:
    metadata:
      labels:
        app: apache
    spec:
      containers:
      - image: httpd
        name: httpd
        resources:
          limits:
            memory: "50Mi"
            cpu: "100m"
            
---
apiVersion: v1
kind: Service
metadata:
  name: apache
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: apache

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: apache
spec:
  rules:
  - http:
      paths:
      - path: /apache
        backend:
          serviceName: apache
          servicePort: 80
