K8s/yaml/08-nodejs-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodejs-ingress
  annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: /
    # kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - path: /nodejs-app(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: nodejs-app-service
            port:
              number: 4000
